Fix override wrap 1/x

--- a/css/table.css
+++ b/css/table.css
@@ -29,7 +29,7 @@
 }
 
 .maintable .item{
-	padding: 5px;
+	padding: 4px;
 	word-break: keep-all;
     margin: 2px;
 	overflow: hidden;
